# MyApplication

app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/myapplication/: IMyAidlInterface.aidl  MyParcelable.aidl
app/src/main/assets/: frag.glsl  vert.glsl
app/src/main/cpp/: CMakeLists.txt  EglHelper.cpp  EglHelper.h  GrayRender.cpp  GrayRender.h  SplitRender.cpp  SplitRender.h  YUVPasteRender.cpp  YUVPasteRender.h  YUVRender.cpp  YUVRender.h  native-lib.cpp
app/src/main/java/com/example/myapplication/: AutoFitSurfaceView.kt  CaiXuKunFragment.kt  CaiXuKunViewModel.kt  CameraFragment.kt  CameraSizes.kt  CoroutineExample.kt  DelegateExample.kt  DualCameraFragment.kt  EglCore.kt  ExampleRenderer.kt  ExifUtils.kt  GLESFragment.kt  GenericListAdapter.kt  HttpExample.kt  ImageViewerFragment.kt  JNILoader.kt  MainActivity.kt  MediaStoreUtils.kt  MyParcelable.kt  MyRenderer.kt  OpenCameraManager.kt  OpenGLFragment.kt  OpenGLUtil.kt  OpenGLViewModel.kt  OrientationLiveData.kt  PermissionsFragment.kt  SelectorFragment.kt  SingleLiveData.kt  User.kt  (+1 more)
app/src/main/res/layout/: activity_main.xml  fragment_caixukun.xml  fragment_camera.xml  fragment_dualcamera.xml  fragment_gles.xml  fragment_opengl.xml  main.xml
app/src/main/res/navigation/: nav_graph.xml
buildSrc/: build.gradle.kts
buildSrc/src/main/java/com.example.buildSrc/: MyCustomPlugin.kt
buildSrc/src/main/kotlin/com.example.buildSrc/: Dependencies.kt  MyCustomPlugin.kt  WriteFileTask.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
